# prinstall

./: .gitignore  .talismanrc  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_driver.yml
.github/workflows/: release.yml
assets/: prinstall.rc
data/: drivers.toml  known_matches.toml
docs/: CNAME  contributing-drivers.md  index.html  lazy-tui-guide.md  selfsign-setup.md
docs/playground/: star-buttons.html
examples/: catalog_smoke.rs
scripts/: README.md  prinstall_setup.ps1  setup.ps1
src/: cli.rs  config.rs  history.rs  lib.rs  main.rs  models.rs  output.rs  paths.rs  privilege.rs  verbose.rs
src/commands/: add.rs  driver.rs  drivers.rs  mod.rs  remove.rs  sdi.rs  sdi_verify.rs  setup.rs
src/core/: executor.rs  mod.rs  ps_error.rs
src/discovery/: ipp.rs  local.rs  mdns.rs  mod.rs  port_scan.rs  snmp.rs  subnet.rs  usb.rs
src/drivers/: bundle.rs  cab.rs  catalog.rs  downloader.rs  inf.rs  known_matches.rs  local_store.rs  manifest.rs  matcher.rs  mod.rs  name_match.rs  resolver.rs  sources.rs  url_date.rs
src/drivers/sdi/: cache.rs  fetcher.rs  index.rs  mod.rs  pack.rs  resolver.rs
src/installer/: mod.rs  powershell.rs
src/tui/: keys.rs  layout.rs  mod.rs  theme.rs
src/tui/views/: drivers.rs  help.rs  identify.rs  install.rs  mod.rs  scan.rs
tests/: cab_extraction.rs  cli_parse.rs  ipp.rs  known_matches.rs  local_enum.rs  manifest.rs  matcher.rs  models.rs  output.rs  port_scan.rs  sdi_cache.rs  sdi_fetcher.rs  sdi_index.rs  sdi_pack.rs  subnet_parse.rs  usb_discovery.rs
tests/fixtures/: brother_type1.inf
