[package]
name = "prinstall"
version = "0.3.1"
edition = "2024"
description = "Discover network printers, match drivers, and install them on Windows"
license = "MIT"
readme = "README.md"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
csnmp = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
clap = { version = "4", features = ["derive"] }
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
zip = "8"
scraper = "0.26"
regex = "1"
mdns-sd = "0.19"

[build-dependencies]
embed-manifest = "1"
