[package]
name = "prinstall"
version = "0.4.4"
edition = "2024"
description = "Discover network printers, match drivers, and install them on Windows"
license = "MIT"
readme = "README.md"

[features]
default = ["sdi"]
sdi = ["dep:sevenz-rust2", "dep:lzma-rs", "dep:sha2", "dep:indicatif"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "charset"] }
csnmp = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
clap = { version = "4", features = ["derive"] }
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
zip = "8"
cab = "0.6"
sevenz-rust2 = { version = "0.20", default-features = false, features = ["compress"], optional = true }
lzma-rs = { version = "0.3", optional = true }
sha2 = { version = "0.11", optional = true }
indicatif = { version = "0.18", optional = true }
scraper = "0.26"
regex = "1"
mdns-sd = "0.19"

[build-dependencies]
embed-manifest = "1"
embed-resource = "3"

# Release profile tuned for a small binary. LTO + single codegen unit
# let rustc eliminate dead code across crate boundaries; strip drops
# debug symbols; panic=abort removes unwind tables (OK for a CLI).
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
